# xmextras

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: CI.yml
scripts/: generate_version.py
tests/: test_mcrlint.py  test_noxm.py
xm-language/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  vsc-extension-quickstart.md
xm-language/client/: package-lock.json  package.json
xm-language/client/src/: extension.js  extension.ts
xm-language/server/: package-lock.json  package.json
xm-language/server/src/: server.js  server.ts  settings.ts
xm-language/server/src/linter/: mcr.ts
xm-language/syntaxes/: xm-macro.tmLanguage.json
xmextras/: __init__.py  dates.py  info.py  mcrlint.py  noxm.py  xm.py  xmsessioncontext.py
xmutil/: __init__.py  xmsessioncontext.py
